<resources>
    <string name="app_name">Tic-Tac-Toe</string>
    <string name="ip_adresa">IP adresa servera (10.0.2.2 za localhost)</string>
    <string name="port">Port servera</string>
    <string name="korisnicko_ime">Korisnicko ime</string>
    <string name="konekcija">Konekcija</string>
    <string name="azuriraj">Azuriraj igrace</string>
    <string name="provera">Provera pristiglog zahteva</string>
    <string name="potvrda">Provera odgovora</string>
    <string name="tekst">Raspolozivi igraci</string>
</resources>